# wificombat-staging-backend

./: .coveragerc  .dockerignore  Dockerfile  Dockerfile.lambda  Procfile  README.md  nixpacks.toml  pyproject.toml  pytest.ini  railway.toml  requirements.txt
.github/workflows/: C-delivery-workflow-do.yml  C-delivery-workflow-ec2.yml  C-delivery-workflow-lambda-zappa.yml  C-delivery-workflow.yml  CI-workflow.yml
api/: urls.py
api/agents/: assignment_grader.py  base_agent.py  quiz_grading_agent.py
api/controllers/: admin.py  ai_agents.py  assessement.py  course.py  media.py  payment.py  permissions.py  schoola_admin.py  teachers.py  users.py  utils.py
api/payment_providers/: base_payment_providers.py  flutterwave_provider.py  payment_provider_factory.py
api/routers/: admin.py  ai_agents.py  assessement.py  course.py  media.py  payment.py  school_admin.py  teacher.py  users.py
api/serializers/: assessement.py  courses.py  media.py  payment.py  users.py
backend/: __init__.py  celery.py  settings.py  urls.py  utils.py
core/: admin.py  apps.py  tasks.py
core/managers/: managers.py  utils.py
core/migrations/: 0001_initial.py  0002_productiontask.py  0004_rename_currentstage_user_current_stage.py  (+49 more)
production_tasks/: add_desc_to_activities.py  add_dummy_users_to_school_admins.py  base_task.py  create_dummy_users.py  create_user_activity.py  seed_user_profile_pic.py  task_executor.py
support/: helpers.py  http.py
templates/: activtation_token.html  course_token.html  reset_token.html
tests/: helper_functions.py
unrealted/: assignment.json  quiz.json
(+43 files in other folders)
