[tool.poetry]
name = "wifi-comabat-lms-backend-api"
version = "0.1.0"
description = ""

authors = ["nwafor6 <nwaforglory6@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.4"
django-cors-headers = "^4.6.0"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"
daphne = "^4.1.2"
django-redis = "^5.4.0"
channels = "^4.2.0"
requests = "^2.32.3"
pillow = "^11.0.0"
channels-redis = "^4.2.1"
django-environ = "^0.11.2"
dj-database-url = "^2.3.0"
boto3 = "^1.35.85"
flake8 = "^7.1.1"
black = "^24.10.0"
faker = "^33.1.0"
pytest-django = "^4.9.0"
coverage = "^7.6.9"
pytest-cov = "^6.0.0"
psycopg2-binary = "^2.9.10"
django-storages = "^1.14.4"
celery = {extras = ["redis"], version = "^5.4.0"}
django-celery-beat = "^2.7.0"
flower = "^2.0.1"
openai = "^1.65.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
